# rollator

./: FILE_MANIFEST.md  IMPLEMENTATION_SUMMARY.md  JETSON_NANO_SETUP.md  LICENSE  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  build.ps1  build.sh  requirements.txt
src/rollator_ws/rollator_gait/: package.xml  setup.py
src/rollator_ws/rollator_gait/rollator_gait/: __init__.py  gait_analyzer.py  gait_analyzer_node.py
src/rollator_ws/rollator_launch/: CMakeLists.txt  package.xml  rollator_orchestrator.py
src/rollator_ws/rollator_launch/config/: camera_calibration.yaml  motor_config.yaml
src/rollator_ws/rollator_launch/launch/: rollator.launch.py  sensor_only.launch.py
src/rollator_ws/rollator_motor/: package.xml  setup.py
src/rollator_ws/rollator_motor/rollator_motor/: __init__.py  motor_controller_node.py  motor_driver.py
src/rollator_ws/rollator_ros/: CMakeLists.txt  package.xml
src/rollator_ws/rollator_ros/msg/: GaitMetrics.msg
src/rollator_ws/rollator_ros/srv/: CalibrateSensor.srv  ExecuteGait.srv
src/rollator_ws/rollator_sensor/: package.xml  setup.py
src/rollator_ws/rollator_sensor/rollator_sensor/: __init__.py  arducam_driver.py  arducam_node.py
