<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rollator_ros</name>
  <version>0.0.1</version>
  <description>ROS 2 interfaces and communication for Smart Rollator</description>
  <maintainer email="developer@rollator.local">Smart Rollator Team</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/rollator/rollator</url>
  <author email="developer@rollator.local">Smart Rollator Team</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
